updated phone numbers

--- a/about.html
+++ b/about.html
@@ -2,24 +2,21 @@
     <div class="container wow fadeInUp">
         <h3>who we are</h3>
         <img src="images/chitrayan/studio/6.jpg" alt="">
-        <h5 class="marg">State of the art film studio for all your needs. </h5>
+        <h5 class="marg">A film studio for all your needs. </h5>
         <p>
-            Chitrayan Film Studio is one of the latest additions to the list of film studios in Kolkata.
-            It has all the facilities and services expected of a modern day studio. With spacious make-up rooms, a huge shooting floor, neat and clean environment Chitrayan keeps all your requirements in mind.
-            Be it films, reality shows or serials, Chitrayan is bound to impress you.
-            Being strategically located, it is accessible via private car, public buses, auto rickshaws and metro (under construction).
-            There have already been shootings of Bengali films, reality shows and serials. An experienced management team is ever present to cater to your demands.
+            Chitrayan Film Studio is the latest addition to the list of film studios in Kolkata. Easily accessible by cars, buses and auto-rickshaws Chitrayan Film Studio,
+            with a dynamic management team and a neat, clean and peaceful environment, provides all the requirements, expected by a production house.
+            Different production houses have already successfully completed their shooting of feature films and television projects, both fiction and non-fiction.
         </p>
     </div>
     <div class="container wow fadeInUp">
         <h3>where we are</h3>
-        <h5 class="marg">Panoramic view of the location. </h5>
+        <h5 class="marg">Conveniently located. </h5>
         <p>
-            Chitrayan Film Studio is conveniently located in the southern part of Kolkata in Bagpota. <br/>
+            Chitrayan Film Studio is conveniently located in the south-west part of Kolkata in Bagpota. <br/>
             Just 3 kilometers away from the proposed Thakurpukur Metro Railway Station<br/>
             3 kilometers from Joka. <br/>
             Simply 10 kilometers from the center of Tollywood,  Tollygunj.<br/>
-            Thanks to the locational advantage production services are easily accessible.
         </p>
         <div class="map">
             <div id="google-map" class="map_model"></div>
@@ -32,19 +29,19 @@
     </div>
     <div class="container wow" style="margin-top: 50px">
         <h3>Routes from different locations</h3>
-        <h5 class="marg">Thakurpukur Market to Chitrayan (3 kilometers) </h5>
+        <h5 class="marg">Thakurpukur Market to Chitrayan Film Studio (3 kilometers) </h5>
         <a data-fancybox-group="1" class="thumb" href="images/thakurpur_chitrayan.jpg">
             <img src="images/thakurpur_chitrayan.jpg" alt="">
             <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
         </a>
 
-        <h5 class="marg">Tollygunj Crossing to Chitrayan (10 kilometers) </h5>
+        <h5 class="marg">Tollygunj Metro Station to Chitrayan Film Studio (10 kilometers) </h5>
         <a data-fancybox-group="1" class="thumb" href="images/tolly_chitrayan.jpg">
             <img src="images/tolly_chitrayan.jpg" alt="">
             <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
         </a>
 
-        <h5 class="marg">Joka to Chitrayan (3 kilometers) </h5>
+        <h5 class="marg">Joka to Chitrayan Film Studio (3 kilometers) </h5>
         <a data-fancybox-group="1" class="thumb" href="images/joka_chitrayan.jpg">
             <img src="images/joka_chitrayan.jpg" alt="">
             <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
@@ -58,14 +55,15 @@
 </script>
 <section class="well5">
     <div class="container">
-        <h3>our team</h3>
+        <h3>MANAGEMENT TEAM</h3>
         <div class="row wow fadeInUp">
             <div class="grid_4">
                 <div class="box3" data-equal-group="1">
                     <img src="images/chitrayan/owners/arup_som.jpg" alt="">
                     <div class="box3_cnt">
                         <h5>Arup Som</h5>
-                        <h6>Founder & Owner</h6>
+                        <h6>Founder & Proprietor</h6>
+                        <p>Mobile: +919890064251</p>
                         <!--<p>Mauris fermeum dictum magna. Sed loreet aliquam leote llus dolor dapibus eget elementum vel curs. us eleifend elit. Aenean aucto.</p>-->
                         <!--<ul class="social-list2">
                             <li><a href="#"><span class="fa fa-google-plus"></span></a></li>
@@ -82,6 +80,7 @@
                     <div class="box3_cnt">
                         <h5>Sayantan Som</h5>
                         <h6>Director of Operations</h6>
+                        <p>Mobile: +919739988366</p>
                     </div>
                 </div>
             </div>
@@ -90,7 +89,8 @@
                     <img src="images/chitrayan/owners/ashok.jpg" alt="">
                     <div class="box3_cnt">
                         <h5>Ashok Bhattacharya</h5>
-                        <h6>General Manager</h6>
+                        <h6>Manager</h6>
+                        <p>Mobile: +919432015888</p>
                     </div>
                 </div>
             </div>
