updated texts with logos

--- a/index.html
+++ b/index.html
@@ -146,7 +146,8 @@
             <div class="container wow fadeInUp">
                 <div class="row">
                     <div class="grid_12">
-                        <h2>chitrayan!</h2>
+                        <!--<h2>chitrayan!</h2>-->
+                        <h2><img src="images/chitrayan/logo/chitrayan_small.png"></h2>
                         <h5>AN IDEAL STUDIO FOR MAKING MOVIE AND TELEVISION PROJECT, BOTH FICTION AND NON-FICTION.</h5>
                     </div>
                 </div>
@@ -368,7 +369,8 @@
                 <div class="grid_4">
                     <div class="brand">
                         <h1 class="brand_name">
-                            <a href="./">Chitrayan</a>
+                            <!--<a href="./">Chitrayan</a>-->
+                            <a href="./"><img style="margin-left: -50px" src="images/chitrayan/logo/chitrayan_small.png"/></a>
                         </h1>
                     </div>
                     <p class="copy">Chitrayan ©
