--- a/index.html
+++ b/index.html
@@ -385,6 +385,8 @@
                         <p>KALAGACHIA, SAKHARIPOTA MAIN ROAD, P.O. THAKURPUKUR</p>
                         <p>P.S MAHESHTALA, DIST. SOUTH 24-PARGANAS</p><br/>
                         <p>Freephone: <a href="callto:#">+91 9830064251</a></p>
+                        <p>Email: <a href="mailto:chitrayanstudio@yahoo.com?Subject=Enquiry">chitrayanstudio@yahoo.com</a></p>
+                        <p>Email: <a href="mailto:info@chitrayanfilmstudio.com?Subject=Enquiry">info@chitrayanfilmstudio.com</a></p>
                     </address>
                 </div>
                 <div class="grid_5">
