added new shoes

--- a/index.html
+++ b/index.html
@@ -244,6 +244,18 @@
                                 <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
                             </a>
                         </div>
+                        <div class="grid_4 isotop_item category01">
+                            <a data-fancybox-group="1" class="thumb" href="images/chitrayan/shooting/8.jpg">
+                                <img class="preview-image" src="images/chitrayan/shooting/8.jpg" alt="">
+                                <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
+                            </a>
+                        </div>
+                        <div class="grid_4 isotop_item category01">
+                            <a data-fancybox-group="1" class="thumb" href="images/chitrayan/shooting/9.jpg">
+                                <img class="preview-image" src="images/chitrayan/shooting/9.jpg" alt="">
+                                <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
+                            </a>
+                        </div>
                     </div>
                     <div class="row isotop">
                         <div class="grid_4 isotop_item category02">
