--- a/studio.html
+++ b/studio.html
@@ -88,5 +88,27 @@
                 <h5><a href="#">Detective 2015 (Television Project-Non-fiction)</a></h5>
             </div>
         </div>
+        <div class="row blog wow fadeInRight">
+            <div class="grid_6">
+                <a data-fancybox-group="1" class="thumb" href="images/chitrayan/shooting/8.jpg">
+                    <img src="images/chitrayan/shooting/8.jpg" alt="">
+                    <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
+                </a>
+            </div>
+            <div class="grid_6">
+                <h5><a href="#">Phire Ashar Gaan (Television Project Non-Fiction)</a></h5>
+            </div>
+        </div>
+        <div class="row blog wow fadeInRight">
+            <div class="grid_6">
+                <a data-fancybox-group="1" class="thumb" href="images/chitrayan/shooting/9.jpg">
+                    <img src="images/chitrayan/shooting/9.jpg" alt="">
+                    <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
+                </a>
+            </div>
+            <div class="grid_6">
+                <h5><a href="#">Phire Ashar Gaan (Television Project Non-Fiction)</a></h5>
+            </div>
+        </div>
     </div>
 </section>
